crates/synthonyx-kit-core/tests/compile-fail/secret_serialize.stderr
error[E0277]: the trait bound `Secret<std::string::String>: serde::Serialize` is not satisfied
 --> tests/compile-fail/secret_serialize.rs:7:35
  |
7 |     let _ = serde_json::to_string(&s);
  |             --------------------- ^^ the trait `serde_core::ser::Serialize` is not implemented for `Secret<std::string::String>`
  |             |
  |             required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret<std::string::String>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `serde_core::ser::Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-$VERSION/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`
